# adore_v2x_sim

./: .ci  .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  adore_v2x_sim.mk  ci.env
adore_v2x_sim/: CMakeLists.txt  README.md  package.xml
adore_v2x_sim/cmake/: PackagingInstallTargets.cmake
adore_v2x_sim/include/adore_v2x_sim/: channel.h  channel2station.h  station.h
adore_v2x_sim/msg/: SimMCM.msg  SimSREM.msg
adore_v2x_sim/src/: channel_sim_node.cpp
files/: requirements.adore_v2x_sim.build.ubuntu20.04.system
